[package]
name = "technical-indicators-wasm"
version = "1.0.0"
edition = "2021"
description = "A high-performance, reliable library for financial market analysis with Rust and WebAssembly support."

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
